Validation Added: check if name and displayorder are not the same.

--- a/EcommerceAppWeb/Views/Category/Create.cshtml
+++ b/EcommerceAppWeb/Views/Category/Create.cshtml
@@ -6,6 +6,7 @@
             <h2 class=" card-header text-primary">Create Category</h2>
             <hr />
         </div>
+        <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="Name"></label><br />
             <input asp-for="Name" class="form-conrtol" /><br />
