--- a/EcommerceAppWeb/Views/_ViewImports.cshtml
+++ b/EcommerceAppWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using EcommerceAppWeb
-@using EcommerceAppWeb.Models
+﻿@using EcommerceApp.DataAccess
+@using EcommerceApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
