--- a/EcommerceAppWeb/Views/_ViewImports.cshtml
+++ b/EcommerceAppWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using EcommerceApp.DataAccess
-@using EcommerceApp.Models
+﻿@using EcommerceApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
